public/stylesheets/default.css
/* ... */
#header #languages #uk {
	margin-right: 5px;
}

#header #languages #fr {
	margin-right: 5px;
}

#header #menus {
	font-size: 10pt;
	font-weight: bold;
	padding-top: 87px;
}

#header #menus #gallery {
	margin-left: 132px;
}

#header #menus #news {
	margin-left: 158px;
}

#header #menus #mypage {
	margin-left: 138px;
}

#header #menus #creativecontests {
	margin-left: 79px;
}

#header #menus #coaliz {
	margin-left: 89px;
}

ul#menus, ul#menus li {
	list-style-image: none;
	list-style-position: outside;
	list-style-type: none;
}

#header ul#menus {
	font-size: 10pt;
	line-height: 100%;
	padding: 0px;
	margin: 0px;
	margin-top: 27px;
}

#header ul#menus li.top {
	float: left;
	position: relative;
	width: 185px;
	text-align: right;
	margin: 0px 5px;
}

#header ul#menus li.top li {
	font-size: 8pt;
	width: 175px;
	padding: 5px;
}

#header ul#menus li div.top {
	padding: 5px 10px 5px 0px;
}

.topRounded {
	-moz-border-radius-topleft: 10px;
	-webkit-border-top-left-radius: 10px;
	-moz-border-radius-topright: 10px;
	-webkit-border-top-right-radius: 10px;
}

.botRounded {
	-moz-border-radius-bottomleft: 10px;
	-webkit-border-bottom-left-radius: 10px;
	-moz-border-radius-bottomright: 10px;
	-webkit-border-bottom-right-radius: 10px;
}

/*#header #menus #gallery {
	margin-left: 132px;
}

#header #menus #news {
	margin-left: 158px;
}

#header #menus #mypage {
	margin-left: 138px;
}

#header #menus #creativecontests {
	margin-left: 79px;
}

#header #menus #coaliz {
	margin-left: 89px;
}*/

#submenus {
	background-color: white;
	border-left: 1px solid #DDDDDD;
	border-right: 1px solid #DDDDDD;
	width: 972px;
	height: 20px;
	margin-right: auto;
	padding-left: 10px;
	padding-right: 10px;
}

/* *********Toolbox********** */

#toolbox {
	float: right;
	margin-left: 7px;
}

#toolbox #login {
	background-image: url(../images/toolbox/login.gif);
	background-repeat: no-repeat;
	color: white;
	text-align: right;
	width: 187px;
	height: 101px;
	padding-top: 10px;
}

#toolbox #login #login_content {
	padding-right: 10px;
}

#toolbox #login #login_content h3 {
	font-size: 9pt;
	font-weight: normal;
	padding: 0;
	margin: 0;
	margin-bottom: 10px;
}

#toolbox #login #login_content a {
	color: white;
	font-size: 8pt;
}

#toolbox #login #login_content #logout {
	text-align: left;
	margin-top: 15px;
	padding-left: 10px;
}

#toolbox #signin {
	background-image: url(../images/toolbox/signin.gif);
	background-repeat: no-repeat;
	color: white;
	text-align: right;
	width: 187px;
	height: 162px;
	margin-bottom: 10px;
}

#toolbox #signin a {
	color: white;
	font-size: 8pt;
}

#toolbox #signin #member_title {
	margin-top: 0;
	margin-right: 10px;
	margin-bottom: 10px;
	font-size: 10pt;
}

#toolbox #signin .form_row {
	margin-right: 10px;
	margin-bottom: 2px;
	font-size: 8pt;
}

#toolbox #signin #forgot {
	font-size: 8pt;
	margin-top: 5px;
	margin-bottom: 10px;
	margin-right: 10px;
}

#toolbox #signin #go_button {
	float: right;
	margin-left: 15px;
}

#toolbox #signin .remember {
	margin-left: 10px;
}

#toolbox #signin a {
	color: white;
	text-decoration: none;
}

#toolbox img {
	margin-bottom: 10px;
}

#toolbox #feedback {
	background-image: url(../images/toolbox/feedback.gif);
	background-repeat: no-repeat;
	width: 187px;
	height: 202px;
}

#toolbox #feedback #title {
	margin-left: 37px;
	padding-top: 10px;
	color: white;
	font-size: 10pt;
}

#toolbox #feedback #subtitle {
	margin-left: 50px;
	color: white;
	font-size: 10pt;
}

#toolbox #feedback #formbody {
	padding-top: 5px;
	margin-left: 20px;
	font-size: 8pt;
}

#toolbox #feedback #formbody #feedback_message {
	width: 145px;
	height: 100px;
	margin-bottom: 15px;
}

#toolbox #feedback #formbody #thanks {
	color: #FF9900;
}

#toolbox #feedback #formbody #send {
	float: right;
	margin-right: 20px;
}

/* *********Page content********** */

#main {
	background-color: #EFEFEF;
	border: 1px solid #DDDDDD;
	width: 982px;
	margin-right: auto;
	padding-left: 5px;
	padding-right: 5px;
	padding-top: 5px;
	padding-bottom: 20px;
	min-height: 1000px;
}

/* *********Index content********** */

#content {
	color: #333333;
}

#content .description {
	float: right;
	font-size: 10pt;
	width: 190px;
}

#content .description .desc_message {
	background-color: white;
	border-left: 1px solid #DDDDDD;
	border-right: 1px solid #DDDDDD;
	padding-left: 5px;
	padding-right: 5px;
	height: 395px;
	text-align: right;
}

#content .description .desc_message h2 {
	margin-top: 0;
	text-align: center;
}

#content .description .desc_message h4 {
	font-weight: normal;
	margin-top: 0;
}

#content .description .desc_message p {
	text-align: left;
	margin-top: 20px;
	margin-bottom: 0;
}

#content .description .desc_message p:first-letter {
	margin-left: 5px;
}

#content .description .desc_message .sign {
	width: 160px;
	margin-bottom: 10px;
}

#lastproject #lastprojectstab {
	background-image: url(../images/lastproj_tab.gif);
	background-repeat: no-repeat;
	background-color: #EFEFEF;
	width: 780px;
	height: 24px;
}

#lastproject #lastprojectstab h4 {
	font-weight: normal;
	color: white;
	font-size: 10pt;
	padding-left: 96px;
	padding-top: 5px;
}

#lastproject #lastprojects_content {
	background-color: white;
	border-left: 1px solid #DDDDDD;
	border-right: 1px solid #DDDDDD;
	width: 777px;
	height: 500px;
	padding-left: 1px;
	padding-top: 5px;
}

#lastproject #lastprojects_content .lastprojects {
	margin-right: 5px;
	margin-top: 10px;
	width: 188px;
	background-color: #EFEFEF;
	text-align: right;
}

#lastproject #lastprojects_content .lastprojects h4 {
	font-weight: normal;
	color: #009900;
	margin-top: 0;
	margin-bottom: 5px;
}

#lastproject #lastprojects_content .lastprojects .details {
	font-size: 8pt;
	line-height: 2em;
	padding-right: 10px;
}

#lastproject #lastprojects_content .lastprojects .category {
	font-size: 8pt;
	background-color: #009900;
	color: white;
	padding-right: 10px;
}
/* ... */

